# bevy_openusd

./: .gitignore  Cargo.toml  Makefile  NOTE.md  PROJECT  README.md  build.rs  flake.nix  imgui.ini
.github/workflows/: rust.yml
assets/: anim_test_complex.usda  anim_test_simple.usda  animated_spinner.usda  physics_hinge.usda  showroom.usda  skel_test_simple.usda  two_xforms.usda
crates/bevy_openusd_rapier/: Cargo.toml
crates/bevy_openusd_rapier/examples/: agilebot_drop.rs
crates/bevy_openusd_rapier/src/: bodies.rs  colliders.rs  debug.rs  joints.rs  lib.rs  scene.rs  writeback.rs
crates/usd_bevy/: Cargo.toml
crates/usd_bevy/src/: anim.rs  asset.rs  build.rs  curves.rs  lib.rs  light.rs  markers.rs  material.rs  mesh.rs  nurbs_patch.rs  physics_attach.rs  prim_ref.rs  tetmesh.rs  texture.rs
crates/usd_bevy/src/physics/: bodies.rs  colliders.rs  convert.rs  debug.rs  joints.rs  mod.rs  scene.rs
crates/usd_physics_markers/: Cargo.toml
crates/usd_physics_markers/src/: lib.rs
crates/usd_rapier/: Cargo.toml
crates/usd_rapier/src/: bodies.rs  colliders.rs  joints.rs
crates/usd_schema/: Cargo.toml
crates/usd_schema/src/: clips.rs  lib.rs  lux.rs  render.rs  shade.rs
crates/usd_schemas/: Cargo.toml
crates/usd_schemas/src/: anim.rs  geom.rs  lib.rs  media.rs  physics.rs  shade.rs  skel.rs  skel_anim_text.rs  tokens.rs  xform.rs
examples/: audit_kitchen.rs  inspect_kitchen.rs  pack_usdz.rs  probe_agilebot.rs  probe_city.rs  probe_greenhouse.rs  probe_hf_skin.rs  probe_hummingbird.rs  probe_skel.rs  probe_walk.rs
src/: camera.rs  keyboard.rs  log_panel.rs  main.rs  overlays.rs  physics_overlay.rs  state.rs  ui.rs
src/lib/: asset.rs  build.rs  curves.rs  lib.rs  light.rs  material.rs  mesh.rs  nurbs_patch.rs  physics_attach.rs  prim_ref.rs  skel_anim.rs  tetmesh.rs
tests/: load_empty.rs  project_animation.rs  project_animation_held.rs  project_curves_points.rs  project_custom_attrs.rs  project_custom_attrs_extensive.rs  project_displaycolor_subsets.rs  project_hermite_curves.rs  project_hierarchy.rs  project_instanceable.rs  project_instanceable_dedup.rs  project_light_linking.rs  project_materials.rs  project_materialx.rs  project_materialx_rich.rs  project_media_proc.rs  project_mesh_correctness.rs  project_nurbs_curves.rs  project_nurbs_patch.rs  project_physics.rs  project_physics_articulation.rs  project_physics_drives_limits.rs  project_physics_markers.rs  project_physics_material.rs  project_physics_proxy.rs  project_physics_root_scene.rs  project_physics_units.rs  project_primitives.rs  project_primvar_interp.rs  project_render.rs  project_skel.rs  project_subdivision.rs  project_tetmesh.rs  project_usdui.rs  project_usdz.rs  project_variants.rs  project_visibility_kind.rs
tests/stages/: animated_held.usda  convert_input.usda  curves_points.usda  custom_attrs.usda  custom_attrs_extensive.usda  displaycolor_subsets.usda  empty.usda  hermite_curves.usda  hierarchy.usda  instanceable.usda  light_linking.usda  materials.usda  materialx.usda  materialx_rich.usda  media_proc.usda  mesh_correctness.usda  nurbs_curves.usda  nurbs_patch.usda  physics_articulation.usda  physics_drives_limits.usda  physics_material.usda  physics_proxy.usda  physics_root_scene.usda  physics_units.usda  primitives.usda  primvar_interp.usda  render_settings.usda  skel.usda  subdivision.usda  tetmesh.usda  usdui.usda  variants.usda  visibility_kind.usda
