[package]
name = "bevy_openusd_rapier"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Rapier physics adapter for bevy_openusd — translates the projection's backend-neutral marker components into bevy_rapier3d RigidBody / Collider / ImpulseJoint / MultibodyJoint."
repository = "https://github.com/bresilla/bevy_openusd"

[dependencies]
# Source of the marker components this crate consumes — depends only
# on the shared marker crate, NOT on bevy_openusd itself, so the
# loader can in turn depend on this adapter for its viewer binary
# without forming a dependency cycle.
usd_physics_markers = { path = "../usd_physics_markers" }
# Backend physics engine.
bevy_rapier3d = "0.33"
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_log",
    "bevy_mesh",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "reflect_auto_register",
] }

[dev-dependencies]
# Examples need the loader (UsdAsset / UsdPlugin); dev-deps don't
# create a build-time cycle with the lib's runtime deps.
bevy_openusd = { path = "../.." }
