[package]
name = "bevy_openusd_rapier"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Rapier physics adapter for bevy_openusd — translates backend-neutral USD physics markers into a self-owned Rapier f64 world that Bevy renders."
repository = "https://github.com/bresilla/bevy_openusd"

[dependencies]
# Source of the marker components this crate consumes — depends only
# on the shared marker crate, NOT on bevy_openusd itself, so the
# loader can in turn depend on this adapter for its viewer binary
# without forming a dependency cycle.
usd_physics_markers = { path = "../usd_physics_markers" }
# Backend physics engine — bare Rapier (f64), NOT bevy_rapier3d. We
# own the world (`PhysicsWorld` resource), step it ourselves, and
# write rigid-body poses back to Bevy `Transform` after each step.
# The f64 variant matches the precision robotics pipelines (gearbox)
# already use, so types cross sim ↔ renderer boundaries without
# precision loss.
rapier3d-f64 = "0.32"
# Vector / quaternion types Rapier uses internally. Bevy uses glam —
# we convert at the boundary.
nalgebra = { version = "0.34", features = ["convert-glam030"] }
bevy = { version = "0.18", default-features = false, features = [
    "std",
    "async_executor",
    "multi_threaded",
    "bevy_asset",
    "bevy_log",
    "bevy_mesh",
    "bevy_render",
    "bevy_pbr",
    "bevy_scene",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "reflect_auto_register",
] }

[dev-dependencies]
# Examples need the loader (UsdAsset / UsdPlugin); dev-deps don't
# create a build-time cycle with the lib's runtime deps.
bevy_openusd = { path = "../.." }

